pkg/cap/msg/errors/example/ue/ue_login.i18n.go
// generated by cap from ue_login.toml at 2019-12-19 17:34:05.6559752 +0800 CST m=+0.034900601, DO NOT EDIT.
package ue

import "golang.org/x/text/language"

func init() {
	initTrRegistry()
	ue_lr.addTranslation(ERR_SESSION_EXPIRED, language.Make("zh-CN"), "会话过期，请重新登陆")
	ue_lr.addTranslation(ERR_SESSION_EXPIRED, language.Make("en-US"), "Session expired, please login")
	ue_lr.addTranslation(ERR_INVALID_USER_NAME_PASSWORD, language.Make("zh-CN"), "用户名或密码错误")
	ue_lr.addTranslation(ERR_INVALID_USER_NAME_PASSWORD, language.Make("en-US"), "Invalid username or password")
}
